# ALP_TP_Final

./: .gitignore  AST.hs  CelAutoGen.hs  README.md  celauto.cabal  ejemplo.ca  ejemplo.hs  game_of_life.ca  gen.hs  parse.hs  parse.y  rule90.ca
app/: Main.hs
examples/: game_of_life.ca  rule90.ca
modules/: AST.hs  CAGraphics.hs  CelAutoGen.hs  Gen.hs  Parse.hs  gen.hs
